--- a/spring-mvc/src/main/resources/templates/servicios.html
+++ b/spring-mvc/src/main/resources/templates/servicios.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <title>Hola mi bebe</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <title>Mascotas</title>
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark">
@@ -21,7 +18,7 @@
         </ul>
         <ul>
             <li class="nav-item active">
-                <a class="nav-link" href="/allEspecialiades">Mascotas </a>
+                <a class="nav-link" href="/allMascotas">Mascotas </a>
                 
               </li>
         </ul>
@@ -63,6 +60,26 @@
         </ul>
     
     </nav>
-    <h1>cecececefcfrf</h1>
+    <br>
+    <br>
+    <table class="table">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">id</th>
+            <th scope="col">Tipo</th>
+            <th scope="col">nombre</th>
+            <th scope="col">Fecha Nacimiento</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr th:each="Especialidad: ${mascotas}">
+            <th scope="row" th:text="${mascota.id}"></th>
+            <td th:text="${mascota.id}"></td>
+            <td th:text="${mascota.nombre}"></td>
+            <td th:text="${mascota.nombre}"></td>
+          </tr>
+
+        </tbody>
+      </table>
 </body>
 </html>
